added a new database and populted it with users also expanded the endpoint

--- a/sample.ipynb
+++ b/sample.ipynb
@@ -483,6 +483,7 @@
    ],
    "source": [
     "import clickhouse_connect\n",
+    "import pandas as pd\n",
     "from dotenv import load_dotenv, dotenv_values\n",
     "import os\n",
     "load_dotenv()"
@@ -501,6 +502,347 @@
     "    password=os.getenv('Clickhouse_Password'),\n",
     "    secure=True\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "limit = 10\n",
+    "skip =0\n",
+    "q1 = f\"SELECT *  FROM default.uk_price_paid ORDER BY date DESC LIMIT {limit} OFFSET {skip};\"\n",
+    "result = client.query(q1)\n",
+    "\n",
+    "columns = result.column_names\n",
+    "rows = result.result_rows\n",
+    "df = pd.DataFrame(rows, columns=columns)\n",
+    "returned_rows_len = len(rows)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'read_rows': '29386570',\n",
+       " 'read_bytes': '1187220223',\n",
+       " 'written_rows': '0',\n",
+       " 'written_bytes': '0',\n",
+       " 'total_rows_to_read': '29386570',\n",
+       " 'result_rows': '10',\n",
+       " 'result_bytes': '22128',\n",
+       " 'elapsed_ns': '1026594847',\n",
+       " 'query_id': '4402856d-64d7-4cb6-be30-2e3b2bc66068'}"
+      ]
+     },
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "result.summary"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>price</th>\n",
+       "      <th>date</th>\n",
+       "      <th>postcode1</th>\n",
+       "      <th>postcode2</th>\n",
+       "      <th>type</th>\n",
+       "      <th>is_new</th>\n",
+       "      <th>duration</th>\n",
+       "      <th>addr1</th>\n",
+       "      <th>addr2</th>\n",
+       "      <th>street</th>\n",
+       "      <th>locality</th>\n",
+       "      <th>town</th>\n",
+       "      <th>district</th>\n",
+       "      <th>county</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>440000000</td>\n",
+       "      <td>2024-10-29</td>\n",
+       "      <td>WC1B</td>\n",
+       "      <td>4JB</td>\n",
+       "      <td>other</td>\n",
+       "      <td>0</td>\n",
+       "      <td>freehold</td>\n",
+       "      <td>VICTORIA HOUSE</td>\n",
+       "      <td></td>\n",
+       "      <td>SOUTHAMPTON ROW</td>\n",
+       "      <td></td>\n",
+       "      <td>LONDON</td>\n",
+       "      <td>CAMDEN</td>\n",
+       "      <td>GREATER LONDON</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2000000</td>\n",
+       "      <td>2024-10-22</td>\n",
+       "      <td>BS40</td>\n",
+       "      <td>5QL</td>\n",
+       "      <td>detached</td>\n",
+       "      <td>0</td>\n",
+       "      <td>freehold</td>\n",
+       "      <td>WEBBSBROOK HOUSE</td>\n",
+       "      <td></td>\n",
+       "      <td>SILVER STREET</td>\n",
+       "      <td>WRINGTON</td>\n",
+       "      <td>BRISTOL</td>\n",
+       "      <td>NORTH SOMERSET</td>\n",
+       "      <td>NORTH SOMERSET</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>125000</td>\n",
+       "      <td>2024-10-07</td>\n",
+       "      <td>B77</td>\n",
+       "      <td>4JT</td>\n",
+       "      <td>semi-detached</td>\n",
+       "      <td>0</td>\n",
+       "      <td>freehold</td>\n",
+       "      <td>10</td>\n",
+       "      <td></td>\n",
+       "      <td>CRIGDON</td>\n",
+       "      <td>WILNECOTE</td>\n",
+       "      <td>TAMWORTH</td>\n",
+       "      <td>TAMWORTH</td>\n",
+       "      <td>STAFFORDSHIRE</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>10000</td>\n",
+       "      <td>2024-08-01</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td>other</td>\n",
+       "      <td>0</td>\n",
+       "      <td>unknown</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td>Little Whinging</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2024-08-01</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td>other</td>\n",
+       "      <td>0</td>\n",
+       "      <td>unknown</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td>Little Whinging</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>48000</td>\n",
+       "      <td>2024-07-31</td>\n",
+       "      <td>B23</td>\n",
+       "      <td>7YU</td>\n",
+       "      <td>terraced</td>\n",
+       "      <td>0</td>\n",
+       "      <td>freehold</td>\n",
+       "      <td>66</td>\n",
+       "      <td></td>\n",
+       "      <td>NORTH PARK ROAD</td>\n",
+       "      <td></td>\n",
+       "      <td>BIRMINGHAM</td>\n",
+       "      <td>BIRMINGHAM</td>\n",
+       "      <td>WEST MIDLANDS</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>45000</td>\n",
+       "      <td>2024-07-31</td>\n",
+       "      <td>B72</td>\n",
+       "      <td>1JY</td>\n",
+       "      <td>flat</td>\n",
+       "      <td>0</td>\n",
+       "      <td>leasehold</td>\n",
+       "      <td>BISHOPS COURT, 9</td>\n",
+       "      <td>APARTMENT 8</td>\n",
+       "      <td>SHOOTERS HILL</td>\n",
+       "      <td></td>\n",
+       "      <td>SUTTON COLDFIELD</td>\n",
+       "      <td>BIRMINGHAM</td>\n",
+       "      <td>WEST MIDLANDS</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>245000</td>\n",
+       "      <td>2024-07-31</td>\n",
+       "      <td>CF24</td>\n",
+       "      <td>3EX</td>\n",
+       "      <td>terraced</td>\n",
+       "      <td>0</td>\n",
+       "      <td>freehold</td>\n",
+       "      <td>130</td>\n",
+       "      <td></td>\n",
+       "      <td>COTTRELL ROAD</td>\n",
+       "      <td>ROATH</td>\n",
+       "      <td>CARDIFF</td>\n",
+       "      <td>CARDIFF</td>\n",
+       "      <td>CARDIFF</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>193880</td>\n",
+       "      <td>2024-07-31</td>\n",
+       "      <td>DE11</td>\n",
+       "      <td>9PH</td>\n",
+       "      <td>detached</td>\n",
+       "      <td>0</td>\n",
+       "      <td>freehold</td>\n",
+       "      <td>141</td>\n",
+       "      <td></td>\n",
+       "      <td>REGENT STREET</td>\n",
+       "      <td>CHURCH GRESLEY</td>\n",
+       "      <td>SWADLINCOTE</td>\n",
+       "      <td>SOUTH DERBYSHIRE</td>\n",
+       "      <td>DERBYSHIRE</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>136500</td>\n",
+       "      <td>2024-07-31</td>\n",
+       "      <td>DE55</td>\n",
+       "      <td>5QH</td>\n",
+       "      <td>terraced</td>\n",
+       "      <td>0</td>\n",
+       "      <td>freehold</td>\n",
+       "      <td>44</td>\n",
+       "      <td></td>\n",
+       "      <td>HARDWICK STREET</td>\n",
+       "      <td>TIBSHELF</td>\n",
+       "      <td>ALFRETON</td>\n",
+       "      <td>BOLSOVER</td>\n",
+       "      <td>DERBYSHIRE</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       price        date postcode1 postcode2           type  is_new  \\\n",
+       "0  440000000  2024-10-29      WC1B       4JB          other       0   \n",
+       "1    2000000  2024-10-22      BS40       5QL       detached       0   \n",
+       "2     125000  2024-10-07       B77       4JT  semi-detached       0   \n",
+       "3      10000  2024-08-01                              other       0   \n",
+       "4          1  2024-08-01                              other       0   \n",
+       "5      48000  2024-07-31       B23       7YU       terraced       0   \n",
+       "6      45000  2024-07-31       B72       1JY           flat       0   \n",
+       "7     245000  2024-07-31      CF24       3EX       terraced       0   \n",
+       "8     193880  2024-07-31      DE11       9PH       detached       0   \n",
+       "9     136500  2024-07-31      DE55       5QH       terraced       0   \n",
+       "\n",
+       "    duration             addr1        addr2           street        locality  \\\n",
+       "0   freehold    VICTORIA HOUSE               SOUTHAMPTON ROW                   \n",
+       "1   freehold  WEBBSBROOK HOUSE                 SILVER STREET        WRINGTON   \n",
+       "2   freehold                10                       CRIGDON       WILNECOTE   \n",
+       "3    unknown                                                                   \n",
+       "4    unknown                                                                   \n",
+       "5   freehold                66               NORTH PARK ROAD                   \n",
+       "6  leasehold  BISHOPS COURT, 9  APARTMENT 8    SHOOTERS HILL                   \n",
+       "7   freehold               130                 COTTRELL ROAD           ROATH   \n",
+       "8   freehold               141                 REGENT STREET  CHURCH GRESLEY   \n",
+       "9   freehold                44               HARDWICK STREET        TIBSHELF   \n",
+       "\n",
+       "               town          district          county  \n",
+       "0            LONDON            CAMDEN  GREATER LONDON  \n",
+       "1           BRISTOL    NORTH SOMERSET  NORTH SOMERSET  \n",
+       "2          TAMWORTH          TAMWORTH   STAFFORDSHIRE  \n",
+       "3   Little Whinging                                    \n",
+       "4   Little Whinging                                    \n",
+       "5        BIRMINGHAM        BIRMINGHAM   WEST MIDLANDS  \n",
+       "6  SUTTON COLDFIELD        BIRMINGHAM   WEST MIDLANDS  \n",
+       "7           CARDIFF           CARDIFF         CARDIFF  \n",
+       "8       SWADLINCOTE  SOUTH DERBYSHIRE      DERBYSHIRE  \n",
+       "9          ALFRETON          BOLSOVER      DERBYSHIRE  "
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.DataFrame(rows,columns=col)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# pd.DataFrame(result.result_set, columns=result.result_columns)"
    ]
   },
   {
